# AdvCpp

./: CMakeLists.txt  README.md
include/: board.hpp  cell.hpp  rle_parser.hpp
src/: board.cpp  main.cpp
